add new section

--- a/index.html
+++ b/index.html
@@ -56,27 +56,58 @@
             <ul>
                 <li>
                     <h2>About One</h2>
-                    <img src="" alt="" width="398" height="501" />
+                    <img src="./images/company-img-1.jpg" alt="About One" width="398" height="501" />
                 </li>
                 <li>
                     <h2>About Two</h2>
-                    <img src="" alt="" width="398" height="501" />
+                    <img src="./images/company-img-2.jpg" alt="About Two" width="398" height="501" />
                 </li>
                 <li>
                     <h2>About Three</h2>
-                    <img src="" alt="" width="398" height="501" />
+                    <img src="./images/company-img-3.jpg" alt="About Three" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Contact One</h2>
-                    <img src="" alt="" width="398" height="501" />
+                    <img src="./images/company-img-4.jpg" alt="Contact One" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Contact Two</h2>
-                    <img src="" alt="" width="398" height="501" />
+                    <img src="./images/company-img-5.jpg" alt="Contact Two" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Contact Three</h2>
-                    <img src="" alt="" width="398" height="501" />
+                    <img src="./images/company-img-6.jpg" alt="Contact Three" width="398" height="501" />
+                </li>
+            </ul>
+        </section>
+
+        <section class="blog">
+            <p>blog</p>
+            <p>CMS Pages</p>
+            <ul>
+                <li>
+                    <h2>Blog One</h2>
+                    <img src="./images/blog-img-1.jpg" alt="Blog One" width="398" height="501" />
+                </li>
+                <li>
+                    <h2>Blog Two</h2>
+                    <img src="./images/blog-img-2.jpg" alt="Blog Two" width="398" height="501" />
+                </li>
+                <li>
+                    <h2>Blog Article (CMS)</h2>
+                    <img src="./images/blog-img-3.jpg" alt="Blog Article (CMS)" width="398" height="501" />
+                </li>
+                <li>
+                    <h2>Customer Stories</h2>
+                    <img src="./images/blog-img-4.jpg" alt="Customer Stories" width="398" height="501" />
+                </li>
+                <li>
+                    <h2>Customer Stories Article (CMS)</h2>
+                    <img src="./images/blog-img-5.jpg" alt="Customer Stories Article (CMS)" width="398" height="501" />
+                </li>
+                <li>
+                    <h2>Team Member (CMS)</h2>
+                    <img src="./images/blog-img-6.jpg" alt="Team Member (CMS)" width="398" height="501" />
                 </li>
             </ul>
         </section>
