add new section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,63 @@
             </ul>
         </section>
 
+        <section class="pricing">
+            <p>pricing</p>
+            <p>Pricing Pages</p>
+            <ul>
+                <li>
+                    <h2>Pricing One</h2>
+                    <img src="./images/pricing-img-1.jpg" alt="Pricing One" width="398" height="501" />
+                </li>
+                <li>
+                    <h2>Pricing Two</h2>
+                    <img src="./images/pricing-img-2.jpg" alt="Pricing Two" width="398" height="501" />
+                </li>
+            </ul>
+        </section>
+
+        <section class="other">
+            <p>other</p>
+            <p>Additional Pages</p>
+            <ul>
+                <li>
+                    <p>UI Cards</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+                <li>
+                    <p>Register</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+                <li>
+                    <p>404 Error</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+                <li>
+                    <p>Changelog</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <p>Login</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+                <li>
+                    <p>Forgot Password</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+                <li>
+                    <p>Style Guide</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+                <li>
+                    <p>Licence</p>
+                    <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
+                </li>
+            </ul>
+        </section>
+
         <section>
             <p></p>
             <p></p>
