--- a/index.html
+++ b/index.html
@@ -169,7 +169,22 @@
             </ul>
         </section>
 
-        <section>
+        <section class=" build your website">
+            <p>Align is the stress-free way to build your website.</p>
+            <ul>
+                <li>
+                    <p>
+                        $79
+                    </p>
+                    <p>
+                        Build a better website faster today.
+                    </p>
+                </li>
+            </ul>
+            <button type="button">Purchase</button>
+        </section>
+
+        <!-- <section>
             <p></p>
             <p></p>
             <ul>
@@ -178,8 +193,13 @@
                     <img src="" alt="" width="398" height="501" />
                 </li>
             </ul>
-        </section>
+        </section> -->
     </main>
+
+    <footer>
+        <p><img src="./images/logo.png" alt="logo">
+            | &copy; <b>Template by</b> Flowbase - <b>Powered by</b> Webflow</p>
+    </footer>
 </body>
 
 </html>
