--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Ctrl / - комбінація щоб додати коментар -->
     <!-- Fav icon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/fav icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div class="star">
+        <div>
             <img src="./images/header/star.png" alt="star picture" width="24" height="24" />
             <p>Tell your customers of something important with this banner!</p>
         </div>
@@ -48,15 +48,15 @@
             <ul>
                 <li>
                     <h2>Landing One</h2>
-                    <img src="./images/leading-one.jpg" alt="Leading one" width="398" height="501" />
+                    <img src="./images/leading/leading-one.jpg" alt="Leading one" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Landing Two</h2>
-                    <img src="./images/leading-two.jpg" alt="Leading two" width="398" height="501" />
+                    <img src="./images/leading/leading-two.jpg" alt="Leading two" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Landing Three</h2>
-                    <img src="./images/leading-three.jpg" alt="Leading three" width="398" height="501" />
+                    <img src="./images/leading/leading-three.jpg" alt="Leading three" width="398" height="501" />
                 </li>
             </ul>
         </section>
@@ -67,27 +67,27 @@
             <ul>
                 <li>
                     <h2>About One</h2>
-                    <img src="./images/company-img-1.jpg" alt="About One" width="398" height="501" />
+                    <img src="./images/company/company-img-1.jpg" alt="About One" width="398" height="501" />
                 </li>
                 <li>
                     <h2>About Two</h2>
-                    <img src="./images/company-img-2.jpg" alt="About Two" width="398" height="501" />
+                    <img src="./images/company/company-img-2.jpg" alt="About Two" width="398" height="501" />
                 </li>
                 <li>
                     <h2>About Three</h2>
-                    <img src="./images/company-img-3.jpg" alt="About Three" width="398" height="501" />
+                    <img src="./images/company/company-img-3.jpg" alt="About Three" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Contact One</h2>
-                    <img src="./images/company-img-4.jpg" alt="Contact One" width="398" height="501" />
+                    <img src="./images/company/company-img-4.jpg" alt="Contact One" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Contact Two</h2>
-                    <img src="./images/company-img-5.jpg" alt="Contact Two" width="398" height="501" />
+                    <img src="./images/company/company-img-5.jpg" alt="Contact Two" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Contact Three</h2>
-                    <img src="./images/company-img-6.jpg" alt="Contact Three" width="398" height="501" />
+                    <img src="./images/company/company-img-6.jpg" alt="Contact Three" width="398" height="501" />
                 </li>
             </ul>
         </section>
@@ -98,27 +98,28 @@
             <ul>
                 <li>
                     <h2>Blog One</h2>
-                    <img src="./images/blog-img-1.jpg" alt="Blog One" width="398" height="501" />
+                    <img src="./images/blog/blog-img-1.jpg" alt="Blog One" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Blog Two</h2>
-                    <img src="./images/blog-img-2.jpg" alt="Blog Two" width="398" height="501" />
+                    <img src="./images/blog/blog-img-2.jpg" alt="Blog Two" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Blog Article (CMS)</h2>
-                    <img src="./images/blog-img-3.jpg" alt="Blog Article (CMS)" width="398" height="501" />
+                    <img src="./images/blog/blog-img-3.jpg" alt="Blog Article (CMS)" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Customer Stories</h2>
-                    <img src="./images/blog-img-4.jpg" alt="Customer Stories" width="398" height="501" />
+                    <img src="./images/blog/blog-img-4.jpg" alt="Customer Stories" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Customer Stories Article (CMS)</h2>
-                    <img src="./images/blog-img-5.jpg" alt="Customer Stories Article (CMS)" width="398" height="501" />
+                    <img src="./images/blog/blog-img-5.jpg" alt="Customer Stories Article (CMS)" width="398"
+                        height="501" />
                 </li>
                 <li>
                     <h2>Team Member (CMS)</h2>
-                    <img src="./images/blog-img-6.jpg" alt="Team Member (CMS)" width="398" height="501" />
+                    <img src="./images/blog/blog-img-6.jpg" alt="Team Member (CMS)" width="398" height="501" />
                 </li>
             </ul>
         </section>
@@ -129,11 +130,11 @@
             <ul>
                 <li>
                     <h2>Pricing One</h2>
-                    <img src="./images/pricing-img-1.jpg" alt="Pricing One" width="398" height="501" />
+                    <img src="./images/pricing/pricing-img-1.jpg" alt="Pricing One" width="398" height="501" />
                 </li>
                 <li>
                     <h2>Pricing Two</h2>
-                    <img src="./images/pricing-img-2.jpg" alt="Pricing Two" width="398" height="501" />
+                    <img src="./images/pricing/pricing-img-2.jpg" alt="Pricing Two" width="398" height="501" />
                 </li>
             </ul>
         </section>
@@ -143,45 +144,45 @@
             <p>Additional Pages</p>
             <ul>
                 <li>
-                    <p>UI Cards</p>
+                    <h2>UI Cards</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <p>Register</p>
+                    <h2>Register</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <p>404 Error</p>
+                    <h2>404 Error</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <p>Changelog</p>
+                    <h2>Changelog</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <p>Login</p>
+                    <h2>Login</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <p>Forgot Password</p>
+                    <h2>Forgot Password</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <p>Style Guide</p>
+                    <h2>Style Guide</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <p>Licence</p>
+                    <h2>Licence</h2>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
             </ul>
         </section>
 
-        <section class=" build your website">
-            <p>Align is the stress-free way to build your website.</p>
+        <section>
+            <h3>Align is the stress-free way to build your website.</h3>
             <ul>
                 <li>
                     <p>
