--- a/index.html
+++ b/index.html
@@ -11,179 +11,184 @@
     <!-- Fav icon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="./css/styles.css">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 
 
 <body>
-    <header>
-        <div>
+    <header class="header">
+        <div class="header-star">
             <img src="./images/header/star.png" alt="star picture" width="24" height="24" />
-            <p>Tell your customers of something important with this banner!</p>
+            <p class="header-star-text">Tell your customers of something important with this banner!</p>
         </div>
-        <div>
-            <a href=""><img src="./images/header/logo.png" alt="site logo" /></a>
-            <nav>
-                <ul>
-                    <li><a href="#overview">Overview</a></li>
-                    <li><a href="#pages">Pages</a></li>
-                    <li><a href="#template">Template</a></li>
+        <div class="header-nav">
+            <a class="link header-link" href=""><img src="./images/header/logo.png" alt="site logo" /></a>
+            <nav class="nav">
+                <ul class="list header-list">
+                    <li><a class="link header-link" href="#overview">Overview</a></li>
+                    <li><a class="link header-link" href="#pages">Pages</a></li>
+                    <li><a class="link header-link" href="#template">Template</a></li>
                 </ul>
             </nav>
-            <button type="button">Buy Align</button>
+            <button class="btn" type="button">Buy Align</button>
         </div>
     </header>
 
     <main>
         <section>
-            <p>align ui kit for webflow</p>
-            <p>Teams build better products with</p>
-            <h1>Align UI</h1>
+            <p class="subtitle">align ui kit for webflow</p>
+            <h1>Teams build better products with Align UI</h1>
             <img src="./images/hero/hero.jpg" alt="Products Align site" width="1280" height="562" />
         </section>
 
         <section class="leading" id="overview">
-            <p>leading pages</p>
-            <p>Discover all the pages that you can use over and over again.</p>
-            <ul>
+            <p class="subtitle">leading pages</p>
+            <h2>Discover all the pages that you can use over and over again.</h2>
+            <ul class="list">
                 <li>
-                    <h2>Landing One</h2>
+                    <h3>Landing One</h3>
                     <img src="./images/leading/leading-one.jpg" alt="Leading one" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Landing Two</h2>
+                    <h3>Landing Two</h3>
                     <img src="./images/leading/leading-two.jpg" alt="Leading two" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Landing Three</h2>
+                    <h3>Landing Three</h3>
                     <img src="./images/leading/leading-three.jpg" alt="Leading three" width="398" height="501" />
                 </li>
             </ul>
         </section>
 
         <section class="company" id="pages">
-            <p>company</p>
-            <p>Company Pages</p>
-            <ul>
+            <p class="subtitle">company</p>
+            <h2>Company Pages</h2>
+            <ul class="list">
                 <li>
-                    <h2>About One</h2>
+                    <h3>About One</h3>
                     <img src="./images/company/company-img-1.jpg" alt="About One" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>About Two</h2>
+                    <h3>About Two</h3>
                     <img src="./images/company/company-img-2.jpg" alt="About Two" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>About Three</h2>
+                    <h3>About Three</h3>
                     <img src="./images/company/company-img-3.jpg" alt="About Three" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Contact One</h2>
+                    <h3>Contact One</h3>
                     <img src="./images/company/company-img-4.jpg" alt="Contact One" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Contact Two</h2>
+                    <h3>Contact Two</h3>
                     <img src="./images/company/company-img-5.jpg" alt="Contact Two" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Contact Three</h2>
+                    <h3>Contact Three</h3>
                     <img src="./images/company/company-img-6.jpg" alt="Contact Three" width="398" height="501" />
                 </li>
             </ul>
         </section>
 
         <section class="blog">
-            <p>blog</p>
-            <p>CMS Pages</p>
-            <ul>
+            <p class="subtitle">blog</p>
+            <h2>CMS Pages</h2>
+            <ul class="list">
                 <li>
-                    <h2>Blog One</h2>
+                    <h3>Blog One</h3>
                     <img src="./images/blog/blog-img-1.jpg" alt="Blog One" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Blog Two</h2>
+                    <h3>Blog Two</h3>
                     <img src="./images/blog/blog-img-2.jpg" alt="Blog Two" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Blog Article (CMS)</h2>
+                    <h3>Blog Article (CMS)</h3>
                     <img src="./images/blog/blog-img-3.jpg" alt="Blog Article (CMS)" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Customer Stories</h2>
+                    <h3>Customer Stories</h3>
                     <img src="./images/blog/blog-img-4.jpg" alt="Customer Stories" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Customer Stories Article (CMS)</h2>
+                    <h3>Customer Stories Article (CMS)</h3>
                     <img src="./images/blog/blog-img-5.jpg" alt="Customer Stories Article (CMS)" width="398"
                         height="501" />
                 </li>
                 <li>
-                    <h2>Team Member (CMS)</h2>
+                    <h3>Team Member (CMS)</h3>
                     <img src="./images/blog/blog-img-6.jpg" alt="Team Member (CMS)" width="398" height="501" />
                 </li>
             </ul>
         </section>
 
         <section class="pricing">
-            <p>pricing</p>
-            <p>Pricing Pages</p>
-            <ul>
+            <p class="subtitle">pricing</p>
+            <h2>Pricing Pages</h2>
+            <ul class="list">
                 <li>
-                    <h2>Pricing One</h2>
+                    <h3>Pricing One</h3>
                     <img src="./images/pricing/pricing-img-1.jpg" alt="Pricing One" width="398" height="501" />
                 </li>
                 <li>
-                    <h2>Pricing Two</h2>
+                    <h3>Pricing Two</h3>
                     <img src="./images/pricing/pricing-img-2.jpg" alt="Pricing Two" width="398" height="501" />
                 </li>
             </ul>
         </section>
 
         <section class="other" id="template">
-            <p>other</p>
-            <p>Additional Pages</p>
-            <ul>
+            <p class="subtitle">other</p>
+            <h2>Additional Pages</h2>
+            <ul class="list">
                 <li>
-                    <h2>UI Cards</h2>
+                    <h3>UI Cards</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <h2>Register</h2>
+                    <h3>Register</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <h2>404 Error</h2>
+                    <h3>404 Error</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <h2>Changelog</h2>
+                    <h3>Changelog</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
-                    <h2>Login</h2>
+                    <h3>Login</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <h2>Forgot Password</h2>
+                    <h3>Forgot Password</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <h2>Style Guide</h2>
+                    <h3>Style Guide</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
                 <li>
-                    <h2>Licence</h2>
+                    <h3>Licence</h3>
                     <img src="./images/arrow.png" alt="arrow" width="40" height="40" />
                 </li>
             </ul>
         </section>
 
         <section>
-            <h3>Align is the stress-free way to build your website.</h3>
-            <ul>
+            <h2>Align is the stress-free way to build your website.</h2>
+            <ul class="list">
                 <li>
                     <p>
                         $79
@@ -193,7 +198,7 @@
                     </p>
                 </li>
             </ul>
-            <button type="button">Purchase</button>
+            <button class="btn" type="button">Purchase</button>
         </section>
 
         <!-- <section>
