--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <title>Align site</title>
 
     <!-- Ctrl / - комбінація щоб додати коментар -->
-    <!-- Fav icon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="./css/styles.css">
-    <!-- Google fonts -->
+    <!-- Google fonts - додаєм першим, бо їх може бути багато-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <!-- Normolize - щоб скинути стилі різних браузерів-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <!-- Fav icon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <!-- Our style  додаємо останнім-->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 
@@ -41,13 +44,16 @@
     </header>
 
     <main>
+
+
+
         <section>
             <p class="subtitle">align ui kit for webflow</p>
             <h1>Teams build better products with Align UI</h1>
             <img src="./images/hero/hero.jpg" alt="Products Align site" width="1280" height="562" />
         </section>
 
-        <section class="leading" id="overview">
+        <section class="lead<ing" id="overview">
             <p class="subtitle">leading pages</p>
             <h2>Discover all the pages that you can use over and over again.</h2>
             <ul class="list">
