--- a/index.html
+++ b/index.html
@@ -27,35 +27,45 @@
 <body>
     <header class="header">
         <div class="header-star">
-            <img src="./images/header/star.png" alt="star picture" width="24" height="24" />
+            <img class="star" src="./images/header/star.png" alt="star picture" width="24" height="24" />
             <p class="header-star-text">Tell your customers of something important with this banner!</p>
         </div>
         <div class="header-nav">
-            <a class="link header-link" href=""><img src="./images/header/logo.png" alt="site logo" /></a>
-            <nav class="nav">
+            <nav class="nav container">
+                <a class="link header-link" href=""><img src="./images/header/logo.png" alt="site logo" /></a>
                 <ul class="list header-list">
                     <li><a class="link header-link" href="#overview">Overview</a></li>
                     <li><a class="link header-link" href="#pages">Pages</a></li>
                     <li><a class="link header-link" href="#template">Template</a></li>
                 </ul>
+                <button class="btn" type="button">Buy Align</button>
             </nav>
-            <button class="btn" type="button">Buy Align</button>
+
         </div>
     </header>
 
     <main>
 
-
-
-        <section>
-            <p class="subtitle">align ui kit for webflow</p>
-            <h1>Teams build better products with Align UI</h1>
+        <section class="hero container">
+            <!-- <p class="subtitle">align ui kit for webflow</p> -->
+            <button class="subtitle">
+                align ui kit for webflow
+            </button>
+            <h1>Teams build better
+                <br />
+                products with
+                <br /> Align UI
+            </h1>
             <img src="./images/hero/hero.jpg" alt="Products Align site" width="1280" height="562" />
         </section>
 
-        <section class="lead<ing" id="overview">
-            <p class="subtitle">leading pages</p>
-            <h2>Discover all the pages that you can use over and over again.</h2>
+        <section class="leading container" id="overview">
+            <button class="subtitle">leading pages</button>
+            <h2>Discover all the pages
+                <br />
+                that you can use over
+                <br /> and over again.
+            </h2>
             <ul class="list">
                 <li>
                     <h3>Landing One</h3>
@@ -72,8 +82,8 @@
             </ul>
         </section>
 
-        <section class="company" id="pages">
-            <p class="subtitle">company</p>
+        <section class="company container" id="pages">
+            <button class="subtitle">company</button>
             <h2>Company Pages</h2>
             <ul class="list">
                 <li>
